Fix a problem with inset photos breaking the text well on mobile

--- a/_size_utilities.scss
+++ b/_size_utilities.scss
@@ -150,7 +150,7 @@
 .width-inset {
 	
 	max-width: 0.60*$max-text-width !important;
-	width: 0.60*$max-text-width !important;
+	width: 80% !important;
 	
 }
 
@@ -158,7 +158,6 @@
 	
 	max-width: 15rem !important;
 	
-}
-
+} 
 
 
